--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+.burger {
+  top: 60px;
+}
+.h_90 {
+  height: 90%;
+}
+.w_100 {
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 640px) {
+  .buttons {
+    display: none;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .user {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  .toggle {
+    display: flex;
   }
 }
